fixing spacing for grid demo

--- a/Cwel.Docs.Web/Assets/scss/sandbox/grid/style.scss
+++ b/Cwel.Docs.Web/Assets/scss/sandbox/grid/style.scss
@@ -32,7 +32,8 @@
 
 .section {
     @include divider;
-    padding-bottom: $SPACE-S;
+    padding-top: $SPACE-M;
+    padding-bottom: $SPACE-M;
 }
 
 /**********************
